--- a/static/chat/css/main.css
+++ b/static/chat/css/main.css
@@ -64,6 +64,10 @@ body {
 /* REUSABLE */
 /* ------------------ */
 
+section {
+    margin-bottom: 50px;
+}
+
 div.center{
     margin-left: auto;
     margin-right: auto;
