Added Google Tag Manager

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -17,6 +17,25 @@
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TF2LM2J');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <!-- Favicon Start -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'chat/favicons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'chat/favicons/favicon-32x32.png' %}">
@@ -44,7 +63,10 @@
 </head>
 
 <body>
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF2LM2J" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
         <nav
             class="navbar navbar-main fixed-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand">
@@ -99,7 +121,8 @@
                     <hr>
                     <form action="{% url 'logoutuser' %}" method="post">
                         {% csrf_token %}
-                        <button type="submit" class="dropdown-item" onclick="return confirm('You are about to logout')">Logout</button>
+                        <button type="submit" class="dropdown-item"
+                            onclick="return confirm('You are about to logout')">Logout</button>
                     </form>
                 </div>
             </div>
