--- a/users/static/users/css/signupuser.css
+++ b/users/static/users/css/signupuser.css
@@ -20,7 +20,7 @@ body {
 
 .form-wrap {
     background-color: #fff;
-    width: 320px;
+    width: 80%;
     margin: 3em auto;
     box-shadow: 0px 1px 8px #BEBEBE;
     -webkit-box-shadow: 0px 1px 8px #BEBEBE;
