--- a/static/chat/css/main.css
+++ b/static/chat/css/main.css
@@ -60,6 +60,97 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+/* --------------Dropdown-------------- */
+#mainDropdown {
+    width: 270px;
+    padding: 15px 5px 3px 5px;
+}
+
+
+
+/* ----------Modal------------- */
+.card {
+    background-color: #ba2e5f;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-family: "Montserrat", sans-serif;
+    background: #c9366a;
+    box-shadow: 0 13px 22px 0 rgba(0, 0, 0, 0.18), inset 0 1px 3px 0 #e74880;
+    border-radius: 20px;
+    padding: 40px 60px;
+    width: 100%;
+    min-height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .right {
+    padding-left: 20px;
+}
+
+.card .title {
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 29px;
+    margin: 0;
+}
+
+.btn-rose {
+    background-image: linear-gradient(-180deg, #ffc0db 3%, #e14f7c 97%);
+    box-shadow: 0 7px 17px 0 rgba(0, 0, 0, 0.24);
+    border-radius: 600px;
+    min-height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 7px;
+    cursor: pointer;
+    position: relative;
+}
+
+.btn-install {
+    flex: 1;
+    width: 100%;
+    background-image: linear-gradient(-180deg, #ffc21c 3%, #ea6e18 100%);
+    box-shadow: 0 0 4px 3px #ec6b17, inset 0 0 10px 0 #fdd41e;
+    border-radius: 600px;
+    min-height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.btn-install .btn-text {
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-install .btn-icon {
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 35px;
+    opacity: 0.3;
+    background: #e5690f;
+    color: white;
+    text-shadow: 0 2px 4px black;
+}
+
 /* ------------------ */
 /* REUSABLE */
 /* ------------------ */
@@ -68,7 +159,7 @@ section {
     margin-bottom: 50px;
 }
 
-div.center{
+div.center {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -107,4 +198,39 @@ h2:after {
 .hide {
     transform: scale(0);
     transition: all 0.4s cubic-bezier(0.565, -0.260, 0.255, 1.410)
+}
+
+
+/* -------------------------------- */
+/* Media queries */
+/* -------------------------------- */
+@media screen and (max-width: 488px) {
+    .nav-label {
+        display: none;
+    }
+
+    .nav-link {
+        font-size: 1.4em;
+    }
+
+    .nav-item {
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .card .left.flex {
+        margin-left: 20px;
+    }
+
+    .btn-install .btn-icon {
+        height: 100px
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .card {
+        display: block;
+        display: block;
+    }
 }
