--- a/users/templates/users/signupuser.html
+++ b/users/templates/users/signupuser.html
@@ -28,7 +28,7 @@ organizing your chat{% endblock description %}
                 {% csrf_token %}
                 <input type="text" class="input" id="id_username" autocomplete="off" placeholder="Username"
                     name="username" required maxlength="30">
-                <input type="email" class="input" id="id_email" autocomplete="off" placeholder="Email (optional)"
+                <input type="email" class="input" id="id_email" autocomplete="off" placeholder="Email (Optional)"
                     name="email">
                 <input type="password" class="input" id="id_password1" autocomplete="off" name="password1"
                     placeholder="Password" required>
