--- a/users/templates/users/all_users.html
+++ b/users/templates/users/all_users.html
@@ -7,15 +7,18 @@ now!{% endblock description %}
 
 {% block content %}
 <div class="container">
-    {% for auser in users %}
-    {{auser.username}}
-    {% if auser in user.friends.all %}
-    <a href="{% url 'users:remove_friend' auser.id %}" class="btn btn-danger">Remove friend</a>
-    {% else %}
-    <a href="{% url 'users:add_friend' auser.id %}" class="btn btn-success">Add friend</a>
-    {% endif %}
-    <br>
-    <br>
-    {% endfor %}
+    <ul class="list-unstyled">
+        {% for auser in users %}
+        <div>
+            {{auser.display|safe}}
+        </div>
+        {% if auser in user.friends.all %}
+        <a href="{% url 'users:remove_friend' auser.id %}" class="btn btn-danger mb-5">Remove friend</a>
+        {% else %}
+        <a href="{% url 'users:add_friend' auser.id %}" class="btn btn-success mb-5">Add friend</a>
+        {% endif %}
+        <br>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock content %}
