--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,19 +5,122 @@
 
 {% block content %}
 <div class="container">
-    <br>
-    <h1>UNDER DEVELOPING</h1>
-    <h4>Our todo list:</h4>
+    <section>
 
-    <ol>
-        <li>profile picture (Avatar)</li>
-        <li>Privacy options</li>
-        <li>Update profile</li>
-        <li>Status</li>
-        <li>Friends list (and choose who can see it)</li>
-        <li>What data others can see (for now username only)</li>
-        <li>Phone number maybe</li>
-    </ol>
-    <h3>Stay tuned for the next updates <img src="{% static 'chat/img/favicon.png' %}" alt=""></h3>
+        <div class="center">
+            <h2>{{user.username}}</h2>
+            <div class="col-lg-4">
+                <img src="{{user.avatar.url}}" class="float-left mr-3" alt="" style="border-radius: 50%;" width="200"
+                    height="200">
+            </div>
+        </div>
+        <div class="media col-lg-5">
+            <div class="media-body">
+                <p>First: {{user.first_name}} &mdash; Last: {{user.last_name}}</p>
+                <p><i class="fas fa-envelope"></i> Email: {{user.email}}</p>
+                <p><i class="fas fa-globe-asia"></i> Country: {{user.country}}</p>
+                <p>Bio: {{user.bio}}</p>
+            </div>
+        </div>
+        <button class="btn btn-outline-info" onclick="openModal('#updateProfile')"><i class="fas fa-edit"></i> Update
+            Profile</button>
+        <!-- <button class="btn btn-outline-warning" onclick="openModal('#updatePrivacy')"><i class="fas fa-lock"></i> Update
+            Privacy</button> -->
+    </section>
+    <br>
+    <br>
+    <br>
+    <section>
+        <div class="center">
+            <h2>Friends</h2>
+        </div>
+        <ul class="list-unstyled">
+            {% for friend in user.friends.all %}
+            {{friend.display|safe}}
+            {% endfor %}
+        </ul>
+
+    </section>
+
+    <!-- ------------------------------------ -->
+    <!-- Modals -->
+    <!-- ------------------------------------ -->
+    <div class="modal fade" id="updateProfile" tabindex="-1" role="dialog" aria-labelledby="updateProfileLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="center">
+                        <h2 class="modal-title" id="updateProfileLabel">Update Profile</h2>
+                    </div>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-md-4 mb-3">
+                                <label for="validationServer013">First name</label>
+                                <input type="text" class="form-control" id="validationServer013"
+                                    placeholder="First name" value="{{user.firs_name }}" name="first_name">
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="validationServer023">Last name</label>
+                                <input type="text" class="form-control" id="validationServer023" placeholder="Last name"
+                                    value="{{user.last_name}}" name="last_name">
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="validationServerUsername33">Username</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="validationServerUsername33"
+                                        placeholder="Username" value="{{user.username}}" name="username">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label for="validationServer033">Bio</label>
+                                <input type="text" class="form-control" id="validationServer033" placeholder="Bio"
+                                    value="{{user.bio}}" name="bio">
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <label for="validationServer053"><i class="fas fa-envelope"></i> Email</label>
+                                <input type="email" class="form-control" id="validationServer053"
+                                    placeholder="Email@gmail.com" name="email">
+                            </div>
+                            <br>
+                            <div class="col-md-7 mb-7">
+                                <label for="id_country"><i class="fas fa-globe-asia"></i> Country</label>
+                                {{user_profile_form.country}}
+                                <br>
+                                <br>
+                            </div>
+                            <div class="col-md-7 mb-7">
+                                <label for="validationServer063">Avatar</label>
+                                <input type="file" class="form-file" name="avatar" id="validationServer063"
+                                    placeholder="Avatar">
+                            </div>
+                        </div>
+                        <button id="saveProfile" style="display: none;"></button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary close-update-profile"
+                        data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success"
+                        onclick="document.querySelector('#saveProfile').click()">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+    document.querySelector('.close-update-profile').onclick = function (e) {
+        var con = confirm("Your edits won't get saved, click confirm to continue")
+        if (con) {
+            closeModal('#updateProfile')
+        }
+    }
+</script>
 {% endblock content %}
