--- a/users/templates/users/view_user.html
+++ b/users/templates/users/view_user.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{viewed_user.username}}{% endblock title %}
 
-{% block description %}{{viewed_user.bio}}{% endblock description %}
+{% block description %}{{viewed_user.about}}{% endblock description %}
 
 
 {% block content %}
@@ -18,7 +18,7 @@
         <p>First: {{viewed_user.first_name}} &mdash; Last: {{viewed_user.last_name}}</p>
         <p><i class="fas fa-envelope"></i> Email: {{viewed_user.email}}</p>
         <p><i class="fas fa-globe-asia"></i> Country: {{viewed_user.country}}</p>
-        <p>Bio: {{viewed_user.bio}}</p>
+        <p>About: {{viewed_user.about}}</p>
     </div>
 </div>
 {% if viewed_user in user.friends.all %}
