Changed Google Adsense code place to the very top

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -5,6 +5,10 @@
 <html lang="en">
 
 <head>
+    <!-- Google Adsense -->
+    <script data-ad-client="ca-pub-2852400661142864" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- End google Adsense -->
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179713611-1"></script>
     <script>
@@ -17,8 +21,6 @@
 
         gtag('config', 'UA-179713611-1');
     </script>
-    <script data-ad-client="ca-pub-2852400661142864" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Favicon Start -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'chat/favicons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'chat/favicons/favicon-32x32.png' %}">
